# shm-impact-detection-xgboost

./: .gitignore  CITATION.cff  FYP_Python - Shortcut.lnk  NOTICE.md  README.md  SECURITY.md  ann_train.py  automaterename_for_flat.m  bandpass_filter.m  check.py  compare_plot.asv  compute_ToA.m  crossvalidation.py  cylindrical_plot.asv  cylindrical_plot.m  datagen.asv  datagen.m  extract_distance_features.asv  extract_distance_features.m  extract_features.asv  extract_features.m  findparam.py  plot_fft.asv  plot_fft.m  plot_hilbert.m  plot_hilbert_phase.m  plot_signal.asv  plot_signal.m  plot_utils.py  predictions_XGB.mat  predictions_XGB_snapped.mat  pyproject.toml  requirements-optional.txt  requirements.txt  test_datagen.m  test_random.asv  test_random.m  testplot.asv  verify_velocity.asv  verify_velocity.m  (+2 more)
16april/: Features_rubham_p10_tank_new.csv  Features_rubham_p10_tank_top.csv  Features_silham_p1_tank_new.csv  Features_silham_p1_tank_top.csv  Features_srubham_p10_tank_new.csv  Features_srubham_p10_tank_top.csv  Features_stlham_p1_tank_new.csv  Features_stlham_p1_tank_top.csv
For Plate/: compute_ToA.m  compute_energy.m  convert_voltage_to_force.m  datagen_plate.m  extract_distance_features_plate.m  extract_features_plate.m  read_labview_file_plate.m
Python/: findparam.py  plot_utils.py  savefile.py  xgboost_train.py
comparison/: README.md
data/: README.md
matlab/: README.md
notebooks/: README.md
results/: README.md
scripts/: cross_validate.py  grouped_validate.py  predict_xgboost.py  run_public_demo.ps1  train_ann.py  train_xgboost.py  (+2 more)
(+54 files in other folders)
