[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fyp-impact-detection"
version = "0.1.0"
description = "Passive PZT impact localisation and classification workflow for sensorised panels and a cylindrical composite tank."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
ann = ["tensorflow>=2.15"]

[tool.setuptools.packages.find]
where = ["src"]
